opam-version: "0.1"
name: "coq-system-semantics"
maintainer: "Thibaut Pérami <thibaut.perami@cl.cam.ac.uk>"
authors: "Thibaut Pérami <thibaut.perami@cl.cam.ac.uk>"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/system-semantics-coq"
bug-reports: "https://github.com/rems-project/system-semantics-coq/issues"
dev-repo: "git+https://github.com/rems-project/system-semantics-coq.git"

synopsis: "Coq infrastructure to reason about hardware system semantics"

depends: [
  "coq" { (>= "8.14.0") | (= "dev") }
  "dune" {>= "3.0"}
  "coq-stdpp"
  "coq-stdpp-bitvector" {= "1.11.0"}
  "coq-record-update" {>= "0.3.0"}
  "coq-sail-stdpp" {= "0.18"}
  "coq-hammer-tactics" {>= "1.3.2"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
