(coq.theory
 (name ISASem)
 (package coq-system-semantics)
 (modules
   Interface
   SailArmInstTypes)
 (stdlib yes)
 (theories
   Ltac2
   stdpp
   RecordUpdate
   Hammer.Tactics
   SailStdpp
   SSCCommon
 )
)

; (rule
;  (targets SailArmInst.v SailArmInst_types.v)
;  (deps armtypes.sail ../armv9-instantiation-types/interfacetypes.sail)
;  (action (run sail -coq armtypes.sail -o SailArmInst))
; )
